--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@angular/platform-browser": "^5.0.5",
     "@angular/platform-browser-dynamic": "^5.0.5",
     "@angular/platform-server": "^5.0.5",
-    "@angular/router": "^5.0.5",    
+    "@angular/router": "^5.0.5",
     "cal-heatmap": "^3.6.2",
     "core-js": "^2.4.1",
+    "ngx-bootstrap": "^2.0.0-beta.9",
     "rxjs": "^5.4.2",
     "typescript": "^2.5.3",
     "zone.js": "^0.8.14"
