--- a/package.json
+++ b/package.json
@@ -23,15 +23,17 @@
     "@angular/platform-browser-dynamic": "^5.0.5",
     "@angular/platform-server": "^5.0.5",
     "@angular/router": "^5.0.5",
+    "angularfire2": "^5.0.0-rc.4",
     "cal-heatmap": "^3.6.2",
     "core-js": "^2.4.1",
+    "firebase": "^4.8.0",
     "ngx-bootstrap": "^2.0.0-beta.9",
     "rxjs": "^5.4.2",
     "typescript": "^2.5.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.2",
+    "@angular/cli": "1.5.5",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/cal-heatmap": "^3.5.34",
