--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "^5.0.5",
     "@angular/compiler-cli": "^5.0.5",
     "@angular/core": "^5.0.5",
+    "@angular/flex-layout": "^2.0.0-beta.12",
     "@angular/forms": "^5.0.5",
     "@angular/http": "^5.0.5",
     "@angular/platform-browser": "^5.0.5",
